<resources>
    <string name="app_name">Youverify Fintrack app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp_message">We have sent an email to %1$s Please remember to check your inbox as well as the spam folder.</string>
    <string name="resend_code">Resend code</string>
    <string name="resend_code_in_s">Resend code in %1$ss</string>
    <string name="budget">Budgets</string>
    <string name="savings">Savings</string>
    <string name="account">Account</string>
    <string name="expenses">Expenses</string>
</resources>